# simple_eiffel_compiler

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.ab80f32.4.10-pre1  README.md
doc/: Examples_of_classes_inheritance_result.txt  Semantic_plan.txt
src/: flex.c  flex.l  main.cpp
src/EiffelModel/EiffelAttributeInfo/: eattribute.cpp  eattribute.h
src/EiffelModel/EiffelCompilation/: _byteCodeInstructions.cpp  _byteCodeInstructions.h  bytecode.cpp  bytecode.h  bytecode_old.cpp
src/EiffelModel/EiffelCore/: eclass.cpp  eclass.h  econstanttable.cpp  econstanttable.h  efeature.cpp  efeature.h  efeaturemetainfo.cpp  efeaturemetainfo.h  emetafeatureinfo.cpp  emetafeatureinfo.h  eprogram.cpp  eprogram.h  etype.cpp  etype.h  euserclass.cpp  euserclass.h  jvmconstant.cpp  jvmconstant.h
src/EiffelModel/EiffelCore/EiffelClasses/: eclassany.cpp  eclassany.h  eclassconsoleio.cpp  eclassconsoleio.h  eclassrtl.cpp  eclassrtl.h  euserclass.cpp  euserclass.h
src/EiffelModel/EiffelCore/RTL/: eclassany.cpp  eclassany.h  eclassconsoleio.cpp  eclassrtl.cpp  eclassrtl.h
src/EiffelModel/EiffelErrors/: compile_error.cpp  compile_error.h  compile_error_codes.h  semantic_error.cpp  semantic_error.h  semantic_error_codes.h
src/EiffelModel/EiffelFeatureInfo/: eattribute.cpp  eattribute.h  einnervariable.cpp  epolymorphicimplementationinfo.cpp  epolymorphicimplementationinfo.h  eroutine.cpp  eroutine.h
src/EiffelModel/EiffelFieldInfo/: efield.cpp  efield.h
src/EiffelModel/EiffelMethodInfo/: elocalvariable.cpp  elocalvariable.h  emethod.cpp  emethod.h  emethodcall.cpp  emethodcall.h
src/EiffelModel/EiffelRoutineInfo/: einnervariable.h  eroutine.cpp  eroutine.h
src/Java/EiffelRTLclasses/src/: Main.java
src/Java/rtl/: Main.java  any.java
src/bison/: bison.output  bison.tab.c  bison.tab.h  bison.y  parser.c  print_tree_nodes.c  print_tree_nodes.h  tree_creators.c  tree_creators.h  tree_nodes.h
src/flex/: flex.l  lexer.c  parser.h
src/flex/utilities/: char_utilities.c  char_utilities.h  chararray_utilities.c  chararray_utilities.h
src/model/: eclassinfo.cpp  eclassinfo.h  efield.cpp  efield.h  emethod.cpp  emethod.h  emethodcall.h
src/utilities/: char_utilities.c  chararray_utilities.h  string_utilities.c  string_utilities.h
test_cases/: UNDONE_calc_stack.e  all_functionality.e  bubble_sort.e  eiffel_dangling_else_conflict.e  fibonacci.e  fill_matrix.e  has_default_constructor_and_not.e  int_stack.e  main_and_submain.e  operators.e  precursor_call.e  state_setting.e
utilities/: _run.sh  lerc.py
(+26 files in other folders)
